# urbancanopy

./: .gitignore  Makefile
backend/: methodology.md  pyproject.toml
backend/configs/: multicity-demo.yml
backend/data/inputs/cities/: taipei.geojson  tokyo.geojson
backend/notebooks/: mvp_pipeline.ipynb
backend/tests/: test_aggregation.py  test_cities.py  test_cli.py  test_comparison.py  test_config.py  test_dataset_probe.py  test_event_store.py  test_exports.py  test_indices.py  test_integration_offline.py  test_integration_smoke.py  test_logger.py  test_logging_schema.py  test_logging_utils.py  test_masking.py  test_modeling.py  test_parks.py  test_scenario.py  test_scoring.py  test_sources.py  test_sse_status_api.py  test_status_api.py  test_thermal.py  test_vectorize.py
backend/urbancanopy/: aggregation.py  cities.py  cli.py  comparison.py  config.py  event_store.py  exports.py  indices.py  logger.py  logging_schema.py  logging_utils.py  masking.py  modeling.py  parks.py  scenario.py  scoring.py  sources.py  status_api.py  thermal.py  vectorize.py
backend/urbancanopy/data/cities/: london.geojson  new_york.geojson
docs/plans/: 2026-03-22-live-data-runtime-design.md  2026-03-22-live-data-runtime.md  2026-03-22-urban-cooling-multicity-expanded.md  2026-03-22-urban-cooling-python-pipeline.md  2026-03-22-urbancanopy-fullstack-logger-verification.md  2026-03-24-weather-data-and-maplibre-migration.md
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FrontendLogger.tsx  MapViewer.tsx  (+3 more)
(+20 files in other folders)
