[project]
name = "urbancanopy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "geopandas>=1.0",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "shapely>=2.0",
    "xarray>=2024.0",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "pystac-client>=0.7.5",
    "odc-stac>=0.3.6",
    "planetary-computer>=1.0.0",
    "dask>=2024.1.0"
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project.scripts]
urbancanopy = "urbancanopy.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests requiring full environments or datasets"
]
